--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "^5.1.5",
+    "node-sass": "^8.0.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-sass-transformer": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
