--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "gsap": "^3.11.5",
+    "gsap-rn": "^0.0.18",
     "lottie-react-native": "^5.1.5",
     "node-sass": "^8.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
-    "react-native-screens": "~3.18.0",
-    "expo-updates": "~0.15.6"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
