--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "firebase": "^9.22.0",
     "gsap": "^3.11.5",
     "gsap-rn": "^0.0.18",
     "lottie-react-native": "^5.1.5",
     "node-sass": "^8.0.0",
     "react": "18.1.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
