--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
@@ -23,9 +24,11 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.9",
     "react-native": "0.70.5",
+    "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
     "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
