--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.9",
     "react-native": "0.70.5",
+    "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
