--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
-    "expo-image-picker": "^14.1.1",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "firebase": "^9.22.1",
     "gsap": "^3.11.5",
     "gsap-rn": "^0.0.18",
-    "lottie-react-native": "^5.1.5",
+    "lottie-react-native": "^5.1.4",
     "node-sass": "^8.0.0",
     "react": "18.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.9",
-    "react-native": "0.70.5",
+    "react-native": "^0.70.8",
     "react-native-elements": "^3.4.3",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
