--- a/app.json
+++ b/app.json
@@ -13,14 +13,7 @@
         "scss",
         "sass"
       ],
-      "plugins": [
-        [
-          "expo-image-picker",
-          {
-            "photosPermission": "The app accesses your photos to let you share them with your friends."
-          }
-        ]
-      ],
+      "plugins": ["expo-image-picker"],
       "transformer": "node_modules/react-native-sass-transformer/index.js"
     },
     "userInterfaceStyle": "light",
