--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-hook-form": "^7.43.9",
     "react-native": "^0.70.8",
     "react-native-elements": "^3.4.3",
+    "react-native-leaflet-view": "^0.1.2",
     "react-native-maps": "^1.3.2",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-sass-transformer": "^2.0.0",
